#78: Add StoryTest unit tests